--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,8 @@
               "src/assets/lib/owlcarousel/assets/owl.carousel.min.css",
               "src/assets/lib/lightbox/css/lightbox.min.css",
               "src/assets/css/style.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "src/styles.css"
             ],
             "scripts": [
