--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "jw-angular-pagination": "^1.2.0",
+    "ng-http-loader": "^12.0.0",
+    "ngx-content-loading": "^0.2.1",
     "ngx-owl-carousel-o": "^14.0.0",
     "ngx-pagination": "^6.0.2",
+    "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
